--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -49,7 +49,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Declare Github SHA Variable
         id: gh_sha
         shell: bash
@@ -63,6 +63,11 @@ jobs:
           docker push ptavarez/auth:${{  env.DOCKER_TAG }}
         env:
           DOCKER_TAG: ${{ steps.gh_sha.outputs.sha_short }}
+
+      - name: Create Auth Depl File
+        run: |-
+          DOCKER_TAG=${{ steps.gh_sha.outputs.sha_short }} envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
+          cat auth-depl.yaml
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -85,8 +90,6 @@ jobs:
 
       - name: Deploy
         run: |-
-          envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
-          cat auth-depl.yaml
           kubectl apply -f auth-depl.yaml
           kubectl rollout restart deployment auth-depl
           kubectl get services -o wide
